# Meetings

./: README.md
Presentations/10-ImplementingTuple/: README.md  bad_constructor.cpp  inherit_example.cpp  inheritance.cpp  lambda.cpp  lamdba_example.cpp  recursive.cpp
Presentations/11 -  Managing resources in C-03- C-11 and C-17/: README.md
Presentations/2021.07/: README.md
Presentations/2022 Dec - Initialization/: readme.md
Presentations/24 - (Aug 2019) Cologne C++ Meeting Summary/: cologne_summary.pptx
Presentations/25 - September - Vocabulary Types/: basic optional.cpp  find interface optional.cpp
Presentations/25 - September 2019 - Vocabulary Types/: roots any.cpp  roots variant.cpp
Presentations/27 - November 2019 - Discussing CppCon and CodeDive/: README.md
Presentations/ACustomTypePredicate/: README.md
Presentations/AsynchronousTaskProcessing/: README.md
Presentations/Catch/: README.md
Presentations/Catch/Examples/: CMakeLists.txt  animalsTest.cpp  assertionsTest.cpp  conanfile.txt  factorialTest.cpp  fixturesTest.cpp  floatsTest.cpp  main.cpp  matchersTest.cpp
Presentations/ClangFormat/: what-have-I-clang-formatted.md
Presentations/ConanIO/: README.md
Presentations/CppCon2018Summary/: README.md  sign-up-sheet.md
Presentations/Generators-CoroutineIntroduction/: README.md
Presentations/HowOthersDoIt/: .README.md.un~  README.md
Presentations/ImplementingVariantVisit/: README.md
Presentations/RangeV3IncomingChangesInSTL/: README.md  slides-range-v3-incoming-changes-in-the-stl.html
Presentations/SummaryOfCpp17Features/: README.md
(+6 files in other folders)
